--- a/listbox.html
+++ b/listbox.html
@@ -10,7 +10,7 @@
 <body>
     <p>List Box</p>
     <h2>Choose your favourite fruit:</h2>
-    <div role="listbox" class="listbox" id="fruitlist">
+    <div role="listbox" class="listbox" aria-label="fruitlist" id="fruitlist">
 
         <div id="fruit1" role="option" aria-selected="true" tabindex="0">Apple</div>
         <div id="fruit2" role="option" aria-selected="false" tabindex="-1">Mango</div>
