--- a/searchbox.html
+++ b/searchbox.html
@@ -20,8 +20,8 @@
         <br>
         <label for="searchbox">Choose your favorite fruit:</label>
         <br>
-        <input type="text" id="searchbox" aria-activedescendant="selected" />
-        <div class="fruitlist" id="fruit-options" aria-label="fruit-options" role="listbox">
+        <input type="text"  role="combobox" id="searchbox" aria-activedescendant="selected" />
+        <div class="fruitlist" aria-expanded="false" id="fruit-options" aria-label="fruit-options" role="listbox">
             <div role="option" id="Strawberry" class="selected" aria-selected="true">Strawberry</div>
             <div role="option" id="Apple">Apple</div>
             <div role="option" id="Mango">Mango</div>
@@ -31,7 +31,7 @@
             <div role="option" id="Pineapple">Pineapple</div>
         </div>
     </div>
-    <script src="search.js"> </script>
+    <script src="search.js"></script>
 </body>
 
 </html>
