--- a/searchbox.html
+++ b/searchbox.html
@@ -21,8 +21,8 @@
         <label for="searchbox">Choose your favorite fruit:</label>
         <br>
         <input type="text"  role="combobox" id="searchbox" aria-activedescendant="selected" />
-        <div class="fruitlist" aria-expanded="false" id="fruit-options" aria-label="fruit-options" role="listbox">
-            <div role="option" id="Strawberry" class="selected" aria-selected="true">Strawberry</div>
+        <div class="fruitlist" id="fruit-options"  aria-selected="true" aria-label="fruit-options" role="listbox">
+            <div role="option" id="Strawberry" class="selected">Strawberry</div>
             <div role="option" id="Apple">Apple</div>
             <div role="option" id="Mango">Mango</div>
             <div role="option" id="Kiwi">Kiwi</div>
@@ -31,7 +31,7 @@
             <div role="option" id="Pineapple">Pineapple</div>
         </div>
     </div>
-    <script src="search.js"></script>
+    <script src="search.js"> </script>
 </body>
 
 </html>
