--- a/searchbox.html
+++ b/searchbox.html
@@ -20,7 +20,7 @@
         <br>
         <label for="searchbox">Choose your favorite fruit:</label>
         <br>
-        <input type="text" role="combobox" aria-label="Choose your favorite fruit" placeholder="Choose your favorite fruit" id="searchbox" aria-activedescendant="" aria-controls="fruit-options" />
+        <input type="text" role="combobox" aria-expanded="false" aria-label="Choose your favorite fruit" placeholder="Choose your favorite fruit" id="searchbox" aria-activedescendant="" aria-controls="fruit-options" />
         <div class="fruitlist" id="fruit-options" x aria-label="fruit-options" role="listbox">
             <div role="option" id="Strawberry" class="selected">Strawberry</div>
             <div role="option" id="Apple">Apple</div>
