--- a/searchbox.html
+++ b/searchbox.html
@@ -13,6 +13,15 @@
         .fruitlist {
             display: none;
         }
+
+        .dropdown-icon {
+            width: 20px;
+            height: 20px;
+            cursor: pointer;
+          
+         
+
+        }
     </style>
 </head>
 
@@ -21,9 +30,12 @@
         <br>
         <label for="searchbox">Choose your favorite fruit:</label>
         <br>
-        <input type="text" role="combobox" aria-expanded="false" aria-label="Choose your favorite fruit"
+        <input type="text" input-field role="combobox" aria-expanded="false" aria-label="Choose your favorite fruit"
             placeholder="Choose your favorite fruit" id="searchbox" aria-activedescendant=""
             aria-controls="fruit-options" />
+        <div class="dropdown-icon" onclick="dropdown()">
+            <img class="dropdown-icon" src="dropdown.png" alt="">
+        </div>
         <div class="fruitlist" id="fruit-options" x aria-label="fruit-options" role="listbox">
             <div role="option" id="Strawberry" class="selected">Strawberry</div>
             <div role="option" id="Apple">Apple</div>
@@ -34,6 +46,7 @@
             <div role="option" id="Pineapple">Pineapple</div>
         </div>
     </div>
-    <script src="search.js"> </script>
+    <script src="search.js"></script>
 </body>
+
 </html>
