--- a/searchbox.html
+++ b/searchbox.html
@@ -39,7 +39,7 @@
         <div class="dropdown-container">
             <input type="text" class="custom-input" input-field role="combobox" aria-expanded="false"
                 aria-label="Choose your favorite fruit" placeholder="Choose your favorite fruit" id="searchbox"
-                aria-activedescendant="" aria-controls="fruit-options" onclick="dropdown()" />
+                aria-activedescendant="" aria-controls="fruit-options"  />
             <span class="dropdown-icon">&#9662;</span>
         </div>
         <div class="fruitlist" id="fruit-options" x aria-label="fruit-options" role="listbox">
