--- a/searchbox.html
+++ b/searchbox.html
@@ -39,8 +39,8 @@
         <div class="dropdown-container">
             <input type="text" class="custom-input" input-field role="combobox" aria-expanded="false"
                 aria-label="Choose your favorite fruit" placeholder="Choose your favorite fruit" id="searchbox"
-                aria-activedescendant="" aria-controls="fruit-options"  />
-            <span class="dropdown-icon">&#9662;</span>
+                aria-activedescendant="" aria-controls="fruit-options" " />
+            <span class="dropdown-icon" aria-hidden="true">&#9662;</span>
         </div>
         <div class="fruitlist" id="fruit-options" x aria-label="fruit-options" role="listbox">
             <div role="option" id="Strawberry" class="selected">Strawberry</div>
